@@ -1,6 +1,7 @@
 3.7.0
 * Post DiFX 2.6
 * Add new column to antenna database: ivsName: the name used by IVS
+* Add more antennas to antenna database
 
 3.6.0
 * Post DiFX 2.5
